--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.intuit.sdp:sdp-android:1.0.2'
     testCompile 'junit:junit:4.12'
 }
